[package]
name = "edgetracer"
version = "0.1.0"
authors = ["Justin Liew <jliew@fastly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local = []
edge = []

[dependencies]
rand = "0.8.3"
image = "0.23.14"
futures = "0.3"
serde = { version = "1.0.124", features = ["derive","rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.5.0"